[package]
name = "jpphoto1080"
version = "0.1.0"
authors = ["jp <jpercyasnet@yahoo.com>"]
edition = "2024"
publish = false

[dependencies]
iced = {git = "https://github.com/pop-os/iced.git" , default-features = false, features = ["wgpu", "tiny-skia", "web-colors", "smol", "winit"], version = "0.14.0-dev"}
chrono = "^0"
kamadak-exif = "^0"
regex = "^0"
walkdir = "^0"
image = "^0"
little_exif = "^0"
